testdata/ttcn3-conformance-tests/ATS/core_language/15_templates/1509_match_operation/NegSem_1509_MatchOperation_002.ttcn
/*****************************************************************
 ** @author   STF 521
 ** @version  0.0.1
 ** @purpose  1:15.9, Ensure that the match operation refuses not initialized operands.
 ** @verdict  pass reject
 *****************************************************************/

// Restriction b) The operands of the match operation shall be completely initialized.

module NegSem_1509_MatchOperation_002 {

type component GeneralComp { }

template integer m_lessThan10 := (-infinity..9);

testcase TC_NegSem_1509_MatchOperation_002() runs on GeneralComp {

    	var integer v_value;


	if (match(v_value, m_lessThan10)) { // error: The operands of the match operation shall be completely initialized.
		setverdict(pass);
	} else {
		setverdict(fail);
	}
}

control{
    execute(TC_NegSem_1509_MatchOperation_002());
}

}